Closed Bug 197043 Opened 22 years ago Closed 22 years ago

Junk Mail Controls... window does not close when click ok

Categories

(SeaMonkey :: MailNews: Message Display, defect)

x86
Windows 2000
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED
mozilla1.4final

People

(Reporter: ritting, Assigned: sspitzer)

References

Details

(Keywords: regression)

Attachments

(2 files)

User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4a) Gecko/20030311 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.4a) Gecko/20030311 The OK button in the Junk Mail Controls.. dialog does not close the window. You must hit cancel or the X to close the window. Changes are set after clicking ok then cancel, but I beleive the appropriate behavior is for the OK button to set the changes and close the window. Reproducible: Always Steps to Reproduce: 1.open Mail and News build 2003031108 2.click on tools>> junk mail controls... 3.clicking the ok button does not close the window Actual Results: The window does not close as expected Expected Results: set the changes made and close the window
Confirming with Build 2003031110 and Windows XP SP1. Also the current Junk Mail settings aren´t reflected in the dialog anymore.
Assignee: naving → sspitzer
Severity: normal → major
Status: UNCONFIRMED → NEW
Component: Filters → Mail Window Front End
Ever confirmed: true
Keywords: regression
QA Contact: laurel → esther
After I completely deleted my Mozilla directory and tried a clean installation the problem disappeared (I use the zipped Windows builds). Andy Ritting: Does this solve the problem for you, too?
I downloaded microsoft build 2003031204 mozilla-win32-installer-sea.exe from the Lateset builds. Before installing the latest I unistalled mozilla 20030311 and I went into "C:\documents and settings\aritting\application data" and deleted the mozilla folder. Then I installed Mozilla 2003031204. clicking OK in Junk Mail Controls still does not close the window. I don't know if this matters, but I am using an IMAP mail server.
Did you also delete the Mozilla-Folder in c:\Program Files after you uninstalled via the Software Settings Panel? Maybe the uninstaller left some files there. I deleted that folder completely while I left my profile directory in the application data directory intact.
I uninstalled again and resinstalled: I uninstalled mozilla, then I deleted the C:\Program Files\mozilla.org folder, then deleted C:\documents and settings\aritting\application data\mozilla folder, then I rebooted and reinstalled mozilla mozilla-win32-installer-sea.exe from 2003031204. Problem still exists. I tried installing on a new Win2k professional box and the issue was there as well.
I get the same problem on Redhat8.0 using the Mozilla 1.3 beta and the latest 1.3. The javascript console gives me the following error: Error: document.getElementById("whiteListAbURI").selectedItem has no properties Source File: chrome://messenger/content/junkMail.js Line: 169
Found a way to go around the problem reading the description of bug #192119. I had to check at least once on "Do not mark messages ...", select an adress book and then click OK. The check box could be unchecked when you back to "Junk Mail controls"
I can confirm this with 20030322 (1.4a build). I have the problem also with a clean profile. I use IMAP. 20030210 (moz 1.3b) does not have this problem. error in JavaScript console: Error: uncaught exception: [Exception... "Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIMsgIncomingServer.spamSettings]" nsresult: "0x8000ffff (NS_ERROR_UNEXPECTED)" location: "JS frame :: chrome://messenger/content/junkMail.js :: onAccept :: line 152" data: no]
I recently checked in a fix for this, as part of bug #202996 at least, I think I got it. andy / sebatian, can you verify?
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
I downloaded build id: 2003042908 and the junk mail controls dialog still does not close when you click ok.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
andy, what's on the console output?
From the Javascript console using build 2003050714 After i click the ok button in the junk mail controls, I expect the form to close but it does not. the console shows this when clicking ok in junk mail controls: Error: uncaught exception: [Exception... "Component returned failure code: 0x8000ffff (NS_ERROR_UNEXPECTED) [nsIMsgIncomingServer.spamSettings]" nsresult: "0x8000ffff (NS_ERROR_UNEXPECTED)" location: "JS frame :: chrome://messenger/content/junkMail.js :: onAccept :: line 165" data: no]
my guess is that we're failing because of the spam folder stuff, like GetOrCreateFolder() or something. I'll ping andy, to see if I can look at his prefs.js I can also wrap with try / catch to prevent this, but I want to fix his issue, too.
Status: REOPENED → ASSIGNED
Attached patch patchSplinter Review
allows the dialog to close, but settings won't be saved for andy. I'll try to fix that once I get a look at andy's prefs.js
that patch is in 1.4 final, r/sr=bienvenu, a=sspitzer
Target Milestone: --- → mozilla1.4final
it looks like andy found a problem. the code I have to checking / creating a "Junk" folder on the server isn't very friendly to all IMAP servers , namespaces. he's got: user_pref("mail.server.server1.namespace.other_users", "\"user.\""); user_pref("mail.server.server1.namespace.personal", "\"INBOX.\""); user_pref("mail.server.server1.namespace.public", "\"\""); user_pref("mail.server.server1.numHdrsToKeep", 30); user_pref("mail.server.server1.realuserName", "aritting"); user_pref("mail.server.server1.spamActionTargetAccount", "imap://xxx@yyy.zzz"); user_pref("mail.server.server1.spamActionTargetFolder", "mailbox://nobody@Local%20Folders/Junk"); user_pref("mail.server.server1.timeout", 29); user_pref("mail.server.server1.type", "imap"); user_pref("mail.server.server1.userName", "xxx");
here's the code I need to fix: NS_IMETHODIMP nsSpamSettings::GetSpamFolderURI(char **aSpamFolderURI) { NS_ENSURE_ARG_POINTER(aSpamFolderURI); if (mMoveTargetMode == nsISpamSettings::MOVE_TARGET_MODE_FOLDER) return GetActionTargetFolder(aSpamFolderURI); // if the mode is MOVE_TARGET_MODE_ACCOUNT // the spam folder URI = account uri + "/Junk" nsXPIDLCString folderURI; nsresult rv = GetActionTargetAccount(getter_Copies(folderURI)); NS_ENSURE_SUCCESS(rv,rv); // see nsMsgFolder::SetPrettyName() for where the pretty name is set. folderURI.Append("/Junk"); *aSpamFolderURI = ToNewCString(folderURI); if (!*aSpamFolderURI) return NS_ERROR_OUT_OF_MEMORY; else return rv; } instead of just appending "/Junk", I probably need to let the folder (local, imap) do that magic. I'll discuss with Le Grand Fromage (bienvenu)
Comment on attachment 122794 [details] [diff] [review] patch this had r/sr=bienvenu a=sspitzer
Attachment #122794 - Flags: superreview+
Attachment #122794 - Flags: review+
Attachment #122794 - Flags: approval1.4+
Attachment #122886 - Flags: superreview?(bienvenu)
Attachment #122886 - Flags: review?(bienvenu)
Attachment #122886 - Flags: approval1.4+
Comment on attachment 122886 [details] [diff] [review] patch for cyrus server problem. sr=bienvenu
Attachment #122886 - Flags: superreview?(bienvenu) → superreview+
fixed. andy, can you try a build with this fix (so at least tomorrow's, or later).
Status: ASSIGNED → RESOLVED
Closed: 22 years ago22 years ago
Resolution: --- → FIXED
Hi, I tried it and the junk mail controls dialog now closes when I click ok. Thank you, this bug appears closed
Attachment #122886 - Flags: review?(bienvenu)
*** Bug 205475 has been marked as a duplicate of this bug. ***
Product: Browser → Seamonkey
This is still a bug in Mozilla 1.7.11 (Mozilla/5.0 (X11; U; SunOS sun4u; en-US; rv:1.7.11) Gecko/20050802). Workaround described in <a href="https://bugzilla.mozilla.org/show_bug.cgi?id=192119">bug 192119</a> solved the problem. Problem may have arisen because I was using Netscape 7 and when I switched to Moz, it simply reused my old ~/.mozilla directory created by Netscape and no junk folders were automatically created. Bug should be reopened.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: