fix for bug #197043

fix the underlying problem that was causing the JMC dialog not to close.
make the spam folder stuff friendly to IMAP servers that have namespaces
like Cyrus IMAP servers.

r/sr=bienvenu, a=sspitzer