mailnews/base/src/nsSpamSettings.cpp
@@ -48,6 +48,10 @@
 #include "nsIMsgFolder.h"
 #include "nsMsgUtils.h"
 #include "nsMsgFolderFlags.h"
+#include "nsImapCore.h"
+#include "nsIImapIncomingServer.h"
+#include "nsIRDFService.h"
+#include "nsIRDFResource.h"
 
 nsSpamSettings::nsSpamSettings()
 {
@@ -373,8 +377,44 @@ NS_IMETHODIMP nsSpamSettings::GetSpamFolderURI(char **aSpamFolderURI)
   nsresult rv = GetActionTargetAccount(getter_Copies(folderURI));
   NS_ENSURE_SUCCESS(rv,rv);
 
+  // we might be trying to get the old spam folder uri
+  // in order to clear the flag
+  // if we didn't have one, bail out.
+  if (folderURI.IsEmpty())
+    return NS_OK;
+
+  nsCOMPtr<nsIRDFService> rdf(do_GetService("@mozilla.org/rdf/rdf-service;1", &rv));
+  NS_ENSURE_SUCCESS(rv, rv);
+  
+  nsCOMPtr<nsIRDFResource> folderResource;
+  rv = rdf->GetResource(folderURI, getter_AddRefs(folderResource));
+  NS_ENSURE_SUCCESS(rv, rv);
+
+  nsCOMPtr <nsIMsgFolder> folder = do_QueryInterface(folderResource);
+  if (!folder)
+    return NS_ERROR_UNEXPECTED;
+
+  nsCOMPtr <nsIMsgIncomingServer> server;
+  rv = folder->GetServer(getter_AddRefs(server));
+  NS_ENSURE_SUCCESS(rv,rv);
+
   // see nsMsgFolder::SetPrettyName() for where the pretty name is set.
   folderURI.Append("/Junk");
+  
+  // XXX todo
+  // better not to make base depend in imap
+  // but doing it here, like in nsMsgCopy.cpp
+  // one day, we'll fix this (and nsMsgCopy.cpp) to use GetMsgFolderFromURI()
+  nsCOMPtr<nsIImapIncomingServer> imapServer = do_QueryInterface(server);
+  if (imapServer) {
+    // Make sure an specific IMAP folder has correct personal namespace
+    // see bug #197043
+    nsXPIDLCString folderUriWithNamespace;
+    (void)imapServer->GetUriWithNamespacePrefixIfNecessary(kPersonalNamespace, folderURI.get(), getter_Copies(folderUriWithNamespace));
+    if (!folderUriWithNamespace.IsEmpty())
+      folderURI = folderUriWithNamespace;
+  }
+
   *aSpamFolderURI = ToNewCString(folderURI);
   if (!*aSpamFolderURI)
     return NS_ERROR_OUT_OF_MEMORY;
